--- a/Instant Lyrics/Instant Lyrics/Launch Screen.xib
+++ b/Instant Lyrics/Instant Lyrics/Launch Screen.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -17,6 +18,7 @@
                 <subviews>
                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3gx-MK-TSc">
                         <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <animations/>
                         <items>
                             <barButtonItem enabled="NO" image="Back" id="JYr-0j-ud8"/>
                             <barButtonItem style="plain" systemItem="flexibleSpace" id="0ob-02-gQg"/>
@@ -28,6 +30,7 @@
                         </items>
                     </toolbar>
                 </subviews>
+                <animations/>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <color key="tintColor" red="0.7630125552" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
