--- a/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
+++ b/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
@@ -18,19 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2sk-uT-h54">
-                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="433" id="0UL-TT-lyH"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="0UL-TT-lyH"/>
-                                    </mask>
-                                </variation>
-                            </webView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnN-Ai-rSS">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eFj-aN-H17">
@@ -114,9 +101,15 @@
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="1eO-hk-Str"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="Fco-cG-eTu"/>
                                 </constraints>
                                 <blurEffect style="light"/>
                             </visualEffectView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h5Y-Zt-ohc">
+                                <rect key="frame" x="0.0" y="22" width="600" height="534"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -126,38 +119,30 @@
                             <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="6Eu-kT-Qjn"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9QX-Qx-xCQ"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="width" secondItem="0Dq-g2-0E5" secondAttribute="width" id="FUn-Gp-drZ"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="IMY-BB-ptY"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="CH5-mB-jhC" secondAttribute="bottom" id="KGl-Qz-XnR"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="NF8-3I-bSI"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="O9z-wG-5ar"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Oz9-mH-RAS"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="3Dq-Rc-CDJ" secondAttribute="bottom" id="RHZ-Tm-wk0"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RT5-4I-Got"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="top" id="Sbc-j2-Q5V"/>
+                            <constraint firstItem="h5Y-Zt-ohc" firstAttribute="top" secondItem="CH5-mB-jhC" secondAttribute="bottom" id="URb-Id-uok"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="h5Y-Zt-ohc" secondAttribute="trailing" constant="-20" id="WsQ-sU-2ae"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="height" secondItem="0Dq-g2-0E5" secondAttribute="height" id="cKD-Pd-d4y"/>
                             <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eSb-sF-Ruk"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eht-PD-USD"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gSJ-ZF-c6Y"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iBb-mm-hJx"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HnN-Ai-rSS" secondAttribute="bottom" id="jQE-HI-0PG"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="kFB-GP-nd7"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="top" id="mxG-p0-gcb"/>
+                            <constraint firstItem="h5Y-Zt-ohc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="mqB-sL-1DB"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="nOI-Hh-PR8"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="puA-ZL-9LS"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="uXk-eS-Fia"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vFD-Zz-WAK"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="2sk-uT-h54" secondAttribute="bottom" id="ytj-Rr-Sz3"/>
+                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="h5Y-Zt-ohc" secondAttribute="bottom" id="qxh-lB-X3X"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="tl9-gZ-OQt"/>
+                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="x7f-40-QK9"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="KGl-Qz-XnR"/>
-                                <exclude reference="O9z-wG-5ar"/>
                                 <exclude reference="2cz-Kg-xEB"/>
                                 <exclude reference="2zm-jB-RJa"/>
-                                <exclude reference="Sbc-j2-Q5V"/>
                                 <exclude reference="eht-PD-USD"/>
                                 <exclude reference="nOI-Hh-PR8"/>
-                                <exclude reference="ytj-Rr-Sz3"/>
                             </mask>
                         </variation>
                     </view>
@@ -165,10 +150,10 @@
                     <size key="freeformSize" width="600" height="600"/>
                     <connections>
                         <outlet property="backButton" destination="df1-g7-7pW" id="6dF-kb-hIN"/>
+                        <outlet property="centerView" destination="h5Y-Zt-ohc" id="1cz-9o-rdP"/>
                         <outlet property="forwardButton" destination="vdW-gT-6dL" id="1KP-nY-fFV"/>
                         <outlet property="progressView" destination="CH5-mB-jhC" id="eAC-5V-xux"/>
                         <outlet property="toolbar" destination="0Dq-g2-0E5" id="dcT-PS-y18"/>
-                        <outlet property="webView" destination="2sk-uT-h54" id="A5b-OD-K3R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
